beryllium: allow reading selinux kernel policy
Change-Id: I574f562db42bc56bb3f505f67b8a897094424999

--- a/init/init.qcom.rc
+++ b/init/init.qcom.rc
@@ -79,6 +79,9 @@ on post-fs
 
     write /dev/ipa 1
 
+    # make the selinux kernel policy world-readable
+    chmod 0444 /sys/fs/selinux/policy
+
 on early-boot
     # Set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
