beryllium: Disable few debug services
Change-Id: I5bf2031d9f99a848de52fde48db795a692520882

--- a/init/init.qcom.rc
+++ b/init/init.qcom.rc
@@ -671,3 +671,12 @@ on property:init.svc.vendor.hwcomposer-2-3=running
 
 on property:init.svc.vendor.hwcomposer-2-3=restarting
     stop ppd
+
+on property:init.svc.cnss_diag=running
+    stop cnss_diag
+
+on property:init.svc.tcpdump=running
+    stop tcpdump
+
+on property:init.svc.vendor.ipacm-diag=running
+    stop vendor.ipacm-diag
