beryllium: rootdir: Give proper permissions for /dev/diag
* This gives proper permission to /dev/diag node so that diag driver
  can load successfully

* Logs spam with error '-13' which basically translates to access denied/invalid permission.

* Fix this by giving system read and write access.

Before in log:
Diag_Lib:  Diag_LSM_Init: Failed to open handle to diag driver, error = 13
06-25 12:53:39.868  3101  3101 I Nvram_btwifi: Diag_LSM_Init() failed.

Change-Id: I87fe322e7c0d91a494d29213e6f657ed8a7032a6
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/init/init.qcom.rc
+++ b/init/init.qcom.rc
@@ -61,6 +61,9 @@ on init
     chmod 0660 /dev/mi-camera-vendor2hal
     chmod 0660 /dev/mi-camera-hal2vendor
 
+    # Change permissions for /dev/diag
+    chmod 0666 /dev/diag
+
 on late-init
     # Start services for bootanim
     start surfaceflinger
